initial setup of my Pebble Service
Pebble service to read from My Tracks service

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,12 @@
                 <action android:name="com.google.android.apps.mytracks.TRACK_STOPPED" />
             </intent-filter>
         </receiver>
+
+        <service
+            android:name="com.nickilous.pebbletracks.PebbleMyTracksService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
     </application>
 
 </manifest>
