start of creating my own broad cast receivers
created my own broadcast receivers for the pebble.  pulled them out of
the app and created them in individual files so that I can have my app
respond to particulars events with out having to register them in code.
this allows me to start apps from my pebble through my app mainly
starting up my tracks

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <receiver
-            android:name="com.nickilous.pebbletracks.PebbleTracksBroadcastReceiver"
+            android:name="com.nickilous.broadcastreceivers.pebble.PebbleTracksBroadcastReceiver"
             android:enabled="true"
             android:exported="true" >
             <intent-filter>
@@ -43,7 +43,43 @@
             android:name="com.nickilous.pebbletracks.PebbleMyTracksService"
             android:enabled="true"
             android:exported="true" >
+            <intent-filter>
+                <action android:name="com.google.android.apps.mytracks.TRACK_STARTED" />
+            </intent-filter>
         </service>
+
+        <receiver
+            android:name="com.nickilous.broadcastreceivers.pebble.PebbleWatchBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.getpebble.action.app.RECEIVE" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.nickilous.pebbletracks.broadcastreceivers.MyTracksLaunchedBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.google.android.apps.mytracks.TRACK_STARTED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.nickilous.broadcastreceivers.pebble.PebbleAckBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.getpebble.action.app.ACK" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.nickilous.broadcastreceivers.pebble.PebbleNackBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.getpebble.action.app.NACK" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
